merge: dev state from 13. may into main (#2)
* backend: new migrations and excuse info fields

* frontend: user side

* frontend: admin view

* frontend: tweaks on user UI

* Pipleine update

* Pipleine update

* ci: trigger build on development branch, tag as dev

* Pipleine update

* fix migrations bug

* fix migrations bug

* vulnerabilites in the build
